Alignment fix

--- a/bookshelf/static/style.css
+++ b/bookshelf/static/style.css
@@ -1269,4 +1269,8 @@ ul.stats li .abandoned {
 	ul.stats li .finished {
 		width: 90px;
 	}
+
+	ul.stats li .started {
+		width: 70px;
+	}
 }
